| Summary: | ASTERISK-29348: menuselect doesn't return errors in many cases | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2021-03-16 11:00:05 | Date Closed: | 2021-03-19 08:13:39 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/BuildSystem |
| Versions: | 16.16.2 18.2.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | menuselect returns success even if enable/disable fails or if invalid command line arguments are supplied. For example:
{code} $ menuselect/menuselect enable--category MENUSELECT_APPS --enable app_jack --enable app_adsiprog --enable app_alarmreceiver --enable app_amd enable--category MENUSELECT_CHANNELS enable--chan_sip aSDASDADADAD menuselect.makeopts RETYREYTERTYRETY ; echo "RC: $?" 0 {code} That command should NOT return a 0. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2021-03-19 08:13:40.337-0500 Change 15628 merged by George Joseph: menuselect: exit non-zero in case of failure on --enable|disable options. [https://gerrit.asterisk.org/c/asterisk/+/15628|https://gerrit.asterisk.org/c/asterisk/+/15628] By: Friendly Automation (friendly-automation) 2021-03-19 08:13:56.748-0500 Change 15644 merged by George Joseph: menuselect: exit non-zero in case of failure on --enable|disable options. [https://gerrit.asterisk.org/c/asterisk/+/15644|https://gerrit.asterisk.org/c/asterisk/+/15644] By: Friendly Automation (friendly-automation) 2021-03-19 08:14:12.763-0500 Change 15643 merged by George Joseph: menuselect: exit non-zero in case of failure on --enable|disable options. [https://gerrit.asterisk.org/c/asterisk/+/15643|https://gerrit.asterisk.org/c/asterisk/+/15643] | ||